[gd_scene load_steps=3 format=3 uid="uid://n6b5jqbuuxx4"]

[ext_resource type="Script" path="res://Scripts/UI/accept_ui.gd" id="1_5hk11"]
[ext_resource type="PackedScene" uid="uid://c35n1fbi4mad4" path="res://Nodes/UI/custom_button_ui.tscn" id="2_4iu6g"]

[node name="AcceptUI" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_5hk11")
ACCEPT_LABEL = "ok"
CANCEL_LABEL = "cancel"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -38.5
offset_right = 60.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Message" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Message"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Accept" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_4iu6g")]
layout_mode = 2
text = "ok"

[node name="Cancel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_4iu6g")]
layout_mode = 2
text = "cancel"

[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_accept_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_down"]
